--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ markdown = "^3.5.1"
 django-filter = "^23.3"
 pylint = "^3.0.2"
 pylint-django = "^2.5.5"
+drf-yasg = "^1.21.7"
 
 
 [build-system]
