--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ django-filter = "^23.3"
 pylint = "^3.0.2"
 pylint-django = "^2.5.5"
 drf-yasg = "^1.21.7"
+djangorestframework-simplejwt = "^5.3.0"
 
 
 [build-system]
